[package]
name = "aarch64-sysreg"
version = "0.1.0"
edition = "2021"
authors = ["Debin <luodeb@outlook.com>"]
description = "Address translation of system registers"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/aarch64-sysreg"
documentation = "https://docs.rs/aarch64-sysreg"
keywords = ["arceos", "arm", "aarch64", "registers"]
categories = ["embedded", "no-std", "hardware-support", "os", "registers"]

[dependencies]
